@@ -1,0 +1,9 @@
+test for sphinx.ext.todo
+========================
+
+.. toctree::
+
+   foo
+   bar
+
+.. todolist::
